--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,12 @@
+
+#=======================================
 spring.datasource.url=jdbc:mysql://localhost/endproject?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
+
+#========================================
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql= true
+hibernate.format_sql =true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
