--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=root
 
 #========================================
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql= true
+#spring.jpa.show-sql= true
 hibernate.format_sql =true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
@@ -14,3 +14,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
+#logging.level.org.springframework. =TRACE
